tests/purs/failing/Superclasses1.out
Error found:
in module [33mMain[0m
at tests/purs/failing/Superclasses1.purs:12:1 - 13:17 (line 12, column 1 - line 13, column 17)

  No type class instance was found for
  [33m                [0m
  [33m  Main.Su Number[0m
  [33m                [0m

while checking that expression [33m#dict Su[0m
  has type [33mSu$Dict t0[0m
in value declaration [33mclNumber[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

